// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection resolver createCollection creates a root collection 1`] = `
Object {
  "assets": Array [
    Object {
      "fileSize": 4,
      "id": "T_1",
      "mimeType": "image/jpeg",
      "name": "derick-david-409858-unsplash.jpg",
      "preview": "test-url/test-assets/derick-david-409858-unsplash__preview.jpg",
      "source": "test-url/test-assets/derick-david-409858-unsplash.jpg",
      "type": "IMAGE",
    },
    Object {
      "fileSize": 4,
      "id": "T_2",
      "mimeType": "image/jpeg",
      "name": "alexandru-acea-686569-unsplash.jpg",
      "preview": "test-url/test-assets/alexandru-acea-686569-unsplash__preview.jpg",
      "source": "test-url/test-assets/alexandru-acea-686569-unsplash.jpg",
      "type": "IMAGE",
    },
  ],
  "children": null,
  "description": "",
  "featuredAsset": Object {
    "fileSize": 4,
    "id": "T_1",
    "mimeType": "image/jpeg",
    "name": "derick-david-409858-unsplash.jpg",
    "preview": "test-url/test-assets/derick-david-409858-unsplash__preview.jpg",
    "source": "test-url/test-assets/derick-david-409858-unsplash.jpg",
    "type": "IMAGE",
  },
  "filters": Array [
    Object {
      "args": Array [
        Object {
          "name": "facetValueIds",
          "type": "FACET_VALUE_IDS",
          "value": "[\\"T_1\\"]",
        },
      ],
      "code": "facet-value-filter",
      "description": "Filter by FacetValues",
    },
  ],
  "id": "T_3",
  "languageCode": "en",
  "name": "Electronics",
  "parent": Object {
    "id": "T_1",
    "name": "__root_collection__",
  },
  "translations": Array [
    Object {
      "description": "",
      "id": "T_3",
      "languageCode": "en",
      "name": "Electronics",
    },
  ],
}
`;

exports[`Collection resolver updateCollection 1`] = `
Object {
  "assets": Array [
    Object {
      "fileSize": 4,
      "id": "T_1",
      "mimeType": "image/jpeg",
      "name": "derick-david-409858-unsplash.jpg",
      "preview": "test-url/test-assets/derick-david-409858-unsplash__preview.jpg",
      "source": "test-url/test-assets/derick-david-409858-unsplash.jpg",
      "type": "IMAGE",
    },
  ],
  "children": null,
  "description": "Apple stuff ",
  "featuredAsset": Object {
    "fileSize": 4,
    "id": "T_1",
    "mimeType": "image/jpeg",
    "name": "derick-david-409858-unsplash.jpg",
    "preview": "test-url/test-assets/derick-david-409858-unsplash__preview.jpg",
    "source": "test-url/test-assets/derick-david-409858-unsplash.jpg",
    "type": "IMAGE",
  },
  "filters": Array [
    Object {
      "args": Array [
        Object {
          "name": "facetValueIds",
          "type": "FACET_VALUE_IDS",
          "value": "[\\"T_3\\"]",
        },
      ],
      "code": "facet-value-filter",
      "description": "Filter by FacetValues",
    },
  ],
  "id": "T_5",
  "languageCode": "en",
  "name": "Pear",
  "parent": Object {
    "id": "T_4",
    "name": "Computers",
  },
  "translations": Array [
    Object {
      "description": "Apple stuff ",
      "id": "T_5",
      "languageCode": "en",
      "name": "Pear",
    },
  ],
}
`;
